finalizacao do modulo 4 - separacao da  variavel de ambiente do projeto no ambiente de producao e build em jar e war

--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>forum</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>war</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -39,6 +40,12 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 
@@ -108,6 +115,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>forumparaservidor</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
