--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>forum</name>
 	<description>Demo project for Spring Boot</description>
-	<packaging>war</packaging>
+
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -40,12 +40,6 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
 		</dependency>
 
 
@@ -115,7 +109,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>forumparaservidor</finalName>
+		<finalName>forum</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
