--- a/forum/src/main/resources/application-prod.properties
+++ b/forum/src/main/resources/application-prod.properties
@@ -32,3 +32,5 @@ info.app.java.version=@java.version@
 #Spring Boot Admin
 spring.boot.admin.client.url=http://localhost:8081
 management.endpoints.web.exposure.include=* 
+
+server.port=${PORT}
